--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "node-ffmpeg-muxer",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "respository": {
-    "type" : "git",
+    "type": "git",
     "url": "https://github.com/dhruvr/node--ffmpeg-muxer"
   },
   "bugs": {
     "url": "https://github.com/dhruvr/node--ffmpeg-muxer/issues"
   },
   "author": "dhruv",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "path": "^0.12.7"
+  }
 }
